# Fuel_Bill_Automation

./: .gitignore  Automation_map_9-20-2024.km  README.md  pyproject.toml
src/: data_cleaner.py  file_loader.py  main.py
src/fuel_bill_automation/: __init__.py
src/fuel_bill_automation/configs/: constants.py
src/fuel_bill_automation/helpers/: file_loader.py  folder_scanner.py
src/fuel_bill_automation/planning/: Meeting_9-20-24.km
src/fuel_bill_automation/reports/: charts.py  errors.py
src/outlook/: scanner.py  sender.py
src/planning/: Meeting_9-20-24.km  New_workflow.km  Project_Map-9-20-2024.km
src/reports/: excel.py
