[project]
authors = [{name = "tanner-ray-martin", email = "tanner.ray.martin.123@gmail.com"}]
dependencies = [ "openpyxl>=3.1.5,<4", "pandas>=2.2.3,<3", "pydantic>=2.9.2,<3", "pyside6>=6.7.3,<7", "pywin32>=307,<308", "seaborn>=0.13.2,<0.14", "matplotlib>=3.9.2,<4", "pypdf2>=3.0.1,<4"]
description = "Add a short description here"
name = "Fuel_Bill_Automation"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
fuel_bill_automation = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyarrow = "==14.0.0"
